--- a/Templates/my-account.html
+++ b/Templates/my-account.html
@@ -22,7 +22,7 @@
                                 <a class="nav-link" id="orders-nav" data-toggle="pill" href="/orders" role="tab"><i class="fa fa-shopping-bag"></i>Orders</a>
                                 <a class="nav-link" id="payment-nav" data-toggle="pill" href="/payment" role="tab"><i class="fa fa-credit-card"></i>Payment Method</a>
                                 <a class="nav-link" id="address-nav" data-toggle="pill" href="/address" role="tab"><i class="fa fa-map-marker-alt"></i>address</a>
-                                <a class="nav-link" id="account-nav" data-toggle="pill" href="/account-details" role="tab"><i class="fa fa-user"></i>Account Details</a>
+                                <a class="nav-link" id="account-nav" data-toggle="pill" href="/myaccountdetails" role="tab"><i class="fa fa-user"></i>Account Details</a>
                                 <a class="nav-link" href="/"><i class="fa fa-sign-out-alt"></i>Logout</a>
                             </div>
                         </div>
