templete complate changes

--- a/Templates/MasterLayout.html
+++ b/Templates/MasterLayout.html
@@ -110,7 +110,7 @@
                                             <a href="/category" class="dropdown-item">Economy</a>
                                         </li>
                                         <li class="dropdown-submenu">
-                                            <a href="category.html" class="dropdown-item">Compact</a>
+                                            <a href="/category" class="dropdown-item">Compact</a>
                                         </li>
                                         <li class="dropdown-submenu">
                                             <a href="/category" class="dropdown-item">Full Size</a>
