--- a/Templates/my-orders.html
+++ b/Templates/my-orders.html
@@ -18,12 +18,12 @@
             <div class="row">
                 <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-12">
                     <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
-                        <a class="nav-link active" id="dashboard-nav" data-toggle="pill" href="my-account.html" role="tab"><i class="fa fa-tachometer-alt"></i>Dashboard</a>
-                        <a class="nav-link" id="orders-nav" data-toggle="pill" href="my-orders.html" role="tab"><i class="fa fa-shopping-bag"></i>Orders</a>
-                        <a class="nav-link" id="payment-nav" data-toggle="pill" href="my-payment.html" role="tab"><i class="fa fa-credit-card"></i>Payment Method</a>
-                        <a class="nav-link" id="address-nav" data-toggle="pill" href="my-address.html" role="tab"><i class="fa fa-map-marker-alt"></i>address</a>
-                        <a class="nav-link" id="account-nav" data-toggle="pill" href="my-account-details.html" role="tab"><i class="fa fa-user"></i>Account Details</a>
-                        <a class="nav-link" href="index-2.html"><i class="fa fa-sign-out-alt"></i>Logout</a>
+                        <a class="nav-link active" id="dashboard-nav" data-toggle="pill" href="/account" role="tab"><i class="fa fa-tachometer-alt"></i>Dashboard</a>
+                        <a class="nav-link" id="orders-nav" data-toggle="pill" href="/orders" role="tab"><i class="fa fa-shopping-bag"></i>Orders</a>
+                        <a class="nav-link" id="payment-nav" data-toggle="pill" href="/payment" role="tab"><i class="fa fa-credit-card"></i>Payment Method</a>
+                        <a class="nav-link" id="address-nav" data-toggle="pill" href="/address" role="tab"><i class="fa fa-map-marker-alt"></i>address</a>
+                        <a class="nav-link" id="account-nav" data-toggle="pill" href="/myaccountdetails" role="tab"><i class="fa fa-user"></i>Account Details</a>
+                        <a class="nav-link" href="/"><i class="fa fa-sign-out-alt"></i>Logout</a>
                     </div>
                 </div>
                 <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-9 col-sm-12">
