--- a/Templates/Signup.html
+++ b/Templates/Signup.html
@@ -13,20 +13,20 @@
             <div class="card-body p-5">
               {% comment %} <h2 class="text-uppercase text-center mb-5">Create an account</h2> {% endcomment %}
 
-              <form>
-
+              <form method="post" action="{% url 'Register' %}">
+               {% csrf_token %}
                 <div class="form-outline mb-4">
-                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg">Your Name</label>
+                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" Name="Name" />
+                  <label class="form-label" for="form3Example1cg" >Your Name</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" Name="email" />
                   <label class="form-label" for="form3Example3cg">Your Email</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" Name = "password" />
                   <label class="form-label" for="form3Example4cg">Password</label>
                 </div>
 
