Created All Models + Few Changes in Signup form

--- a/Templates/Login.html
+++ b/Templates/Login.html
@@ -80,23 +80,30 @@
         </head>
         <body>
         
-        <h2>Popup Form</h2>
+        {% comment %} <h2>Popup Form</h2>
         <p>Click on the button at the bottom of this page to open the login form.</p>
-        <p>Note that the button and the form is fixed - they will always be positioned to the bottom of the browser window.</p>
+        <p>Note that the button and the form is fixed - they will always be positioned to the bottom of the browser window.</p> {% endcomment %}
         
         <button class="open-button" onclick="openForm()">Open Form</button>
         
         <div class="form-popup" id="myForm">
           <form action="/action_page.php" class="form-container">
-            <h1>Login</h1>
+            <h1>LLogin</h1>
         
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email" required>
         
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
+
+            <button onclick="document.location='default.asp'">HTML Tutorial</button>
+
+            {% comment %} <a href='http://localhost:8000/admin'>
         
             <button type="submit" class="btn">Login</button>
+          </a> {% endcomment %}
+              {% comment %} <button type="Click" class="btn">Login As Admin</button> {% endcomment %}
+            
             <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
           </form>
         </div>
